Updating the index file structure.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pizza Maker</title>
+    <title>Arrays Battle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/global.css">
     <link rel="stylesheet" href="assets/styles/pizza-maker.css">
-    <script src="assets/scripts/pizza-maker.js"></script>
+    <script src="assets/scripts/arrays-battle.js"></script>
 </head>
 <body>
 <nav class="gh-navbar">
@@ -45,149 +45,14 @@
         </li>
     </ul>
 </nav>
-<main class="pizza-maker">
+<main class="arrays-battle">
     <header>
-        <h1><a href="https://ca2los.github.io/pizza-maker/">Pizza Maker</a></h1>
+        <h1><a href="https://ca2los.github.io/arrays-battle/">Arrays Battle</a></h1>
         <h2>By ca2los</h2>
         <p>This program is a simulation of a tool that retrieves inputs and return outputs to simulate a checkout order. The idea is to practice essential concepts such as Statements, Expressions, Conditionals, Functions, Loops, Objects, and the DOM interaction.</p>
     </header>
-    <!-- Name and Contact -->
-    <section class="pm-intro">
-        <form id="pizza-form">
-            <label for="pm-name">Order for:</label>
-            <input type="text" id="pm-name" name="name" minlength="4" maxlength="40" placeholder="Full Name" required>
-            <label for="pm-tel">Contact:</label>
-            <input type="tel" id="pm-tel" name="tel" minlength="12" maxlength="22" placeholder="Telephone" required>
-            <button type="button" onclick="pizzaCustomer()">Submit</button>
-        </form>
-    </section>
-    <!-- Validate Data -->
-    <section id="pm-validate">
-        <div id="table-wrapper"></div>
-    </section>
-    <!-- Pizza Menu -->
-    <section id="pm-menu">
-        <h2>Select the pizza of your preference:</h2>
-        <div class="pm-menu-wrapper">
-            <div class="ticket-preview">
-                <div id="pm-ticket" class="ticket-preview-wrapper"></div>
-            </div>
-            <ul class="pizza-options">
-                <li class="pizza">
-                    <div class="pizza-image">
-                        <img src="./assets/images/pizza-style.svg" alt="Pizza Image">
-                    </div>
-                    <div class="pizza-details">
-                        <h3>Cheese Pizza</h3>
-                        <p>Pizza dough, pizza sauce, mozzarella cheese, parmesan, and garlic.</p>
-                        <p><span>USD $21.50</span></p>
-                        <button class="btn-bookmark" type="button" value="cheese">Select</button>
-                    </div>
-                </li>
-                <li class="pizza">
-                    <div class="pizza-image">
-                        <img src="./assets/images/pizza-style.svg" alt="Pizza Image">
-                    </div>
-                    <div class="pizza-details">
-                        <h3>Italian Pizza</h3>
-                        <p>Smoked mozzarella cheese, meatballs, caramelized onions, and basil.</p>
-                        <p><span>USD $25.99</span></p>
-                        <button class="btn-bookmark" type="button" value="italian">Select</button>
-                    </div>
-                </li>
-                <li class="pizza">
-                    <div class="pizza-image">
-                        <img src="./assets/images/pizza-style.svg" alt="Pizza Image">
-                    </div>
-                    <div class="pizza-details">
-                        <h3>Mexican Pizza</h3>
-                        <p>Fried flour tortillas, refried beans, ground beef, cheese, and taco sauce.</p>
-                        <p><span>USD $22.99</span></p>
-                        <button class="btn-bookmark" type="button" value="mexican">Select</button>
-                    </div>
-                </li>
-                <li class="pizza">
-                    <div class="pizza-image">
-                        <img src="./assets/images/pizza-style.svg" alt="Pizza Image">
-                    </div>
-                    <div class="pizza-details">
-                        <h3>Pepperoni Pizza</h3>
-                        <p>A great crust, gooey cheese, onions, and tons of prime pepperoni.</p>
-                        <p><span>USD $25.99</span></p>
-                        <button class="btn-bookmark" type="button" value="pepperoni">Select</button>
-                    </div>
-                </li>
-            </ul>
-            <ul class="pizza-toppings">
-                <li class="topping" data-value="basil" aria-checked="false">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Basil">
-                        <span>Basil</span>
-                        <span class="price">USD $1.50</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="garlic">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Garlic">
-                        <span>Garlic</span>
-                        <span class="price">USD $0.99</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="ham">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Ham">
-                        <span>Ham</span>
-                        <span class="price">USD $2.99</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="meatballs">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Meatballs">
-                        <span>Meatballs</span>
-                        <span class="price">USD $4.99</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="mushrooms">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Mushrooms">
-                        <span>Mushrooms</span>
-                        <span class="price">USD $1.99</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="olives">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Olives">
-                        <span>Olives</span>
-                        <span class="price">USD $2.50</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="parmesan">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Parmesan">
-                        <span>Parmesan</span>
-                        <span class="price">USD $1.99</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="peppers">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Peppers">
-                        <span>Peppers</span>
-                        <span class="price">USD $2.50</span>
-                    </label>
-                </li>
-                <li class="topping" data-value="sausage">
-                    <label>
-                        <img src="./assets/images/pizza-custom.svg" alt="Toppings: Sausage">
-                        <span>Sausage</span>
-                        <span class="price">USD $3.99</span>
-                    </label>
-                </li>
-            </ul>
-        </div>
-        <div class="btn-wrapper">
-            <button type="button" onclick="location.reload()">Cancel order</button>
-        </div>
-    </section>
+    <!-- Start Program: Arrays Battle -->
+
 </main>
 <footer>
     <ul class="left">
