--- a/index.html
+++ b/index.html
@@ -1,89 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Arrays Battle</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/global.css">
-    <link rel="stylesheet" href="assets/styles/pizza-maker.css">
-    <script src="assets/scripts/arrays-battle.js"></script>
-</head>
-<body>
-<nav class="gh-navbar">
-    <ul>
-        <li>
-            <a href="https://github.com/ca2los" class="github">
-                <img src="./assets/images/github-stroke-01.svg" alt="Github" width="24" height="24" />
-            </a>
-        </li>
-        <li>
-            <a href="https://github.com/ca2los/pizza-maker" class="project">
-                Project
-                <img src="./assets/images/project-stroke.svg" alt="Project" width="24" height="24" />
-            </a>
-        </li>
-        <li>
-            <a href="https://github.com/ca2los?tab=repositories" class="repositories">
-                Repositories
-                <img src="./assets/images/repositories-stroke.svg" alt="Repositories" width="24" height="24" />
-            </a>
-        </li>
-        <li>
-            <a href="mailto:test@gmail.com" class="contact">
-                Contact
-                <img src="./assets/images/mail-stroke.svg" alt="Contact" width="24" height="24" />
-            </a>
-        </li>
-        <li>
-            <a href="https://threads.net" class="threads">
-                <img src="./assets/images/threads-stroke-01.svg" alt="Threads" width="24" height="24" />
-            </a>
-        </li>
-    </ul>
-</nav>
-<main class="arrays-battle">
-    <header>
-        <h1><a href="https://ca2los.github.io/arrays-battle/">Arrays Battle</a></h1>
-        <h2>By ca2los</h2>
-        <p>This program is a simulation of a tool that retrieves inputs and return outputs to simulate a checkout order. The idea is to practice essential concepts such as Statements, Expressions, Conditionals, Functions, Loops, Objects, and the DOM interaction.</p>
-    </header>
-    <!-- Start Program: Arrays Battle -->
-
-</main>
-<footer>
-    <ul class="left">
-        <li>
-            <a href="https://github.com/ca2los">
-                <img src="./assets/images/github-stroke-02.svg" alt="Github" width="24" height="24" />
-                ca2los
-            </a>
-        </li>
-        <li>
-            <a href="https://github.com/ca2los/pizza-maker?tab=MIT-1-ov-file#readme" class="license">
-                <img src="./assets/images/license-stroke.svg" alt="License" width="24" height="24" />
-                License
-            </a>
-        </li>
-        <li>
-            <a href="#" class="repositories">
-                <img src="./assets/images/repositories-stroke.svg" alt="Repositories" width="24" height="24" />
-                Repositories
-            </a>
-        </li>
-        <li>
-            <a href="#" class="contact">
-                <img src="./assets/images/mail-stroke.svg" alt="Contact" width="24" height="24" />
-                Contact
-            </a>
-        </li>
-    </ul>
-    <ul class="right">
-        <li>Copyright © 2025 ca2los LLC. All rights reserved.</li>
-    </ul>
-</footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Arrays Battle</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="assets/styles/global.css">
+        <link rel="stylesheet" href="assets/styles/arrays-battle.css">
+        <script src="assets/scripts/arrays-battle.js"></script>
+    </head>
+    <body>
+        <nav class="gh-navbar">
+            <ul>
+                <li>
+                    <a href="https://github.com/ca2los" class="github">
+                        <img src="./assets/images/github-stroke-01.svg" alt="Github" width="24" height="24" />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/ca2los/pizza-maker" class="project">
+                        Project
+                        <img src="./assets/images/project-stroke.svg" alt="Project" width="24" height="24" />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/ca2los?tab=repositories" class="repositories">
+                        Repositories
+                        <img src="./assets/images/repositories-stroke.svg" alt="Repositories" width="24" height="24" />
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:test@gmail.com" class="contact">
+                        Contact
+                        <img src="./assets/images/mail-stroke.svg" alt="Contact" width="24" height="24" />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://threads.net" class="threads">
+                        <img src="./assets/images/threads-stroke-01.svg" alt="Threads" width="24" height="24" />
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Program: START -->
+        <main class="arrays-battle">
+            <header>
+                <h1><a href="https://ca2los.github.io/arrays-battle/">Arrays Battle</a></h1>
+                <h2>By ca2los</h2>
+                <p>This program explores the concepts to retrieve data from arrays and create new sets of data for interaction without affecting the original data. StarCraft is the theme that I used for this exercise to facilitate the learning process.</p>
+            </header>
+        </main>
+        <!-- Program: END -->
+        <footer>
+        <ul class="left">
+            <li>
+                <a href="https://github.com/ca2los">
+                    <img src="./assets/images/github-stroke-02.svg" alt="Github" width="24" height="24" />
+                    ca2los
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/ca2los/pizza-maker?tab=MIT-1-ov-file#readme" class="license">
+                    <img src="./assets/images/license-stroke.svg" alt="License" width="24" height="24" />
+                    License
+                </a>
+            </li>
+            <li>
+                <a href="#" class="repositories">
+                    <img src="./assets/images/repositories-stroke.svg" alt="Repositories" width="24" height="24" />
+                    Repositories
+                </a>
+            </li>
+            <li>
+                <a href="#" class="contact">
+                    <img src="./assets/images/mail-stroke.svg" alt="Contact" width="24" height="24" />
+                    Contact
+                </a>
+            </li>
+        </ul>
+        <ul class="right">
+            <li>Copyright © 2025 ca2los LLC. All rights reserved.</li>
+        </ul>
+    </footer>
+    </body>
 </html>
