Next steps in the HTML structure.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <h2>By ca2los</h2>
                 <p>This program explores the concepts to retrieve data from arrays and create new sets of data for interaction without affecting the original data. StarCraft is the theme that I used for this exercise to facilitate the learning process.</p>
             </header>
+            <!-- ToDo: Initialize program -->
+            <!-- ToDo: Display stats -->
+            <!-- ToDo: Select characters -->
+            <!-- ToDo: Start battle -->
         </main>
         <!-- Program: END -->
         <footer>
