Next steps in the HTML structure.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <!-- ToDo: Display stats -->
             <!-- ToDo: Select characters -->
             <!-- ToDo: Start battle -->
+            <!-- ToDo: Display results -->
+            <!-- ToDo: Restart -->
         </main>
         <!-- Program: END -->
         <footer>
