--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <!-- ToDo: Select characters -->
             <!-- ToDo: Start battle -->
             <!-- ToDo: Display results -->
+            <!-- ToDo: Restart game -->
         </main>
         <!-- Program: END -->
         <footer>
