Next steps in the HTML structure.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- ToDo: Select characters -->
             <!-- ToDo: Start battle -->
             <!-- ToDo: Display results -->
-            <!-- ToDo: Restart game -->
+            <!-- ToDo: Restart game || cancel -->
         </main>
         <!-- Program: END -->
         <footer>
